--- a/index.html
+++ b/index.html
@@ -214,9 +214,9 @@ span{flex:1;}
 <button class="menu-btn" onclick="toggleMenu()">☰</button>
 
 <div class="menu" id="menu">
-  <button onclick="showSection('tasks')">📝 Tasks</button>
-  <button onclick="showSection('completed')">✅ Completed</button>
-  <button onclick="showSection('profile')">🙋‍♂ Profile</button>
+  <button onclick="showSection('tasks')">Tasks</button>
+  <button onclick="showSection('completed')">Completed</button>
+  <button onclick="showSection('profile')">Profile</button>
 </div>
 
 <div class="card">
@@ -244,7 +244,7 @@ span{flex:1;}
 </div>
 
 <div id="profile" class="hidden">
-  <h2>🙋‍♂️ Profile</h2>
+  <h2>Profile</h2>
 
   <div class="profile-row">
     <input id="name" value="Your Name">
@@ -256,7 +256,7 @@ span{flex:1;}
     <button class="edit-btn">✏️</button>
   </div>
 
-  <button class="save-btn">💾 Save</button>
+  <button class="save-btn">Save</button>
 </div>
 
 </div>
